# serializer version: 1
# name: test_first_level_attribute_error
  dict({
    'errors': list([
      dict({
        'code': 'required',
        'detail': 'This field is required.',
        'source': dict({
          'pointer': '/data/attributes/headline',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_first_level_custom_attribute_error
  dict({
    'errors': list([
      dict({
        'detail': 'Too short',
        'source': dict({
          'pointer': '/data/attributes/body-text',
        }),
        'title': 'Too Short title',
      }),
    ]),
  })
# ---
# name: test_many_third_level_dict_errors
  dict({
    'errors': list([
      dict({
        'code': 'required',
        'detail': 'This field is required.',
        'source': dict({
          'pointer': '/data/attributes/comments/0/attachment/data',
        }),
        'status': '400',
      }),
      dict({
        'code': 'required',
        'detail': 'This field is required.',
        'source': dict({
          'pointer': '/data/attributes/comments/0/body',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_relationship_errors_has_correct_pointers_with_camelize
  dict({
    'errors': list([
      dict({
        'code': 'incorrect_type',
        'detail': 'Incorrect type. Expected resource identifier object, received str.',
        'source': dict({
          'pointer': '/data/relationships/authors',
        }),
        'status': '400',
      }),
      dict({
        'code': 'incorrect_type',
        'detail': 'Incorrect type. Expected resource identifier object, received str.',
        'source': dict({
          'pointer': '/data/relationships/mainAuthor',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_relationship_errors_has_correct_pointers_with_dasherize
  dict({
    'errors': list([
      dict({
        'code': 'incorrect_type',
        'detail': 'Incorrect type. Expected resource identifier object, received str.',
        'source': dict({
          'pointer': '/data/relationships/authors',
        }),
        'status': '400',
      }),
      dict({
        'code': 'incorrect_type',
        'detail': 'Incorrect type. Expected resource identifier object, received str.',
        'source': dict({
          'pointer': '/data/relationships/main-author',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_relationship_errors_has_correct_pointers_with_no_formatting
  dict({
    'errors': list([
      dict({
        'code': 'incorrect_type',
        'detail': 'Incorrect type. Expected resource identifier object, received str.',
        'source': dict({
          'pointer': '/data/relationships/authors',
        }),
        'status': '400',
      }),
      dict({
        'code': 'incorrect_type',
        'detail': 'Incorrect type. Expected resource identifier object, received str.',
        'source': dict({
          'pointer': '/data/relationships/main_author',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_second_level_array_error
  dict({
    'errors': list([
      dict({
        'code': 'required',
        'detail': 'This field is required.',
        'source': dict({
          'pointer': '/data/attributes/comments/0/body',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_second_level_dict_error
  dict({
    'errors': list([
      dict({
        'code': 'required',
        'detail': 'This field is required.',
        'source': dict({
          'pointer': '/data/attributes/comment/body',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_third_level_array_error
  dict({
    'errors': list([
      dict({
        'code': 'required',
        'detail': 'This field is required.',
        'source': dict({
          'pointer': '/data/attributes/comments/0/attachments/0/data',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_third_level_custom_array_error
  dict({
    'errors': list([
      dict({
        'code': 'invalid',
        'detail': 'Too short data',
        'source': dict({
          'pointer': '/data/attributes/comments/0/attachments/0/data',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
# name: test_third_level_dict_error
  dict({
    'errors': list([
      dict({
        'code': 'required',
        'detail': 'This field is required.',
        'source': dict({
          'pointer': '/data/attributes/comments/0/attachment/data',
        }),
        'status': '400',
      }),
    ]),
  })
# ---
